# django-discordbot

./: .buildpacks  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  _version.txt  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg
.github/: FUNDING.yml  auto_assign.yml
.github/workflows/: lint.yml  python-publish-testpypi.yml  python-publish.yml
discordbot/: admin.py  apps.py  bot.py  config.py  errors.py  models.py  urls.py  utils.py  views.py
discordbot-extras/amongus/: coords.py  requirements.txt  tracker.py
discordbot/botclasses/: __init__.py  bot.py  context.py  tree.py
discordbot/botcmds/: _preset.py  basic.py  channels.py  converters.py  domains.py  embedgenerator.py  games.py  help.py  moderation.py  music.py  networking.py  notifier.py  owneronly.py  polls.py  reports.py  support.py  userinfo.py
discordbot/botcmds/games/: __init__.py  connect4.py  minecraft.py
discordbot/botevents/: __init__.py  general.py  on_command.py  on_command_error.py  on_message.py  on_reaction_add.py  on_voice_state_update.py
discordbot/botmodules/: apis.py  audio.py  bots.py  converters.py  parser.py  serverdata.py
discordbot/files/: amongus_tracker.py
discordbot/files/amongus/: coords.py  requirements.txt  tracker.py
discordbot/management/commands/: run-discordbot.py
discordbot/migrations/: 0001_initial.py  0002_auto_20200701_1655.py  0003_amongusgame.py  0004_auto_20201022_0928.py  0005_amongusgame_text_message_id.py  0006_auto_20201022_1804.py  0007_auto_20201023_2145.py  0008_amongusgame_last_tracking_data.py  0009_remove_amongusgame_tracker_connected.py  0010_viergewinntgame.py  0011_auto_20201031_1721.py  0012_botpermission.py  0013_notifiersub.py  0014_auto_20201110_1826.py  0015_notifiersub_name.py  0016_auto_20201113_2031.py  0017_audiosource.py  0018_auto_20201114_2032.py  0019_auto_20201115_1844.py  0020_auto_20201121_2214.py  0021_auto_20210529_2045.py  0022_member_settings.py  0023_auto_20210905_1703.py  0024_delete_botpermission.py  0025_delete_amongusgame.py
discordbot/static/admin/discordbot/css/: colors-discordbot.css  index-discordbot.css  style.css
discordbot/templates/admin/: index.html
discordbot/templates/admin/discordbot/: app_index.html  change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  object_history.html
docs/: index.md  setup.md
