[metadata]
name = django-discordbot
version = 0.0.3
description = Ein Django Projekt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaelurben/django-discordbot/
author = Rafael Urben
author_email = rafaelurben@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
