[metadata]
name = django-discordbot
version = file: _version.txt
description = Ein Discordbot für Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaelurben/django-discordbot/
author = Rafael Urben
author_email = github@rafaelurben.ch
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    GitHub = https://github.com/rafaelurben/django-discordbot
    Issues = https://github.com/rafaelurben/django-discordbot/issues

[options]
setup_requires =
    setuptools
install_requires =
    Django>=3.2
    gunicorn>=20.0.4
    requests>=2.24.0
    discord.py>=1.5.1
    opuslib>=3.0.1
    ffmpeg>=1.4
    fuzzywuzzy[speedup]>=0.18.0
    youtube-dl>=2020.9.6
    rich>=9.0.1
    tqdm>=4.43.0
    dnspython>=2.0.0
python_requires = >= 3.8
include_package_data = true
packages = find:
